...
                case .augmentedReality:
                    AugmentedRealityView()
                case .gestures:
                    GesturesView()
                }
            }
            .navigationTitle("Learnings")
        }
    }
    
    @ViewBuilder
    private var navigationUsingDeprecatedNavigationViewAPI: some View {
        NavigationView {
...
